--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -6,8 +6,8 @@
       content: '';
       width: 70%;
       height: 100%;
-      background: url('/src/assets/services-background.svg') no-repeat center
-        center;
+      background: url('/testing/src/assets/services-background.svg') no-repeat
+        center center;
       background-size: cover;
       position: absolute;
       left: 50%;
