--- a/src/scss/_works.scss
+++ b/src/scss/_works.scss
@@ -66,7 +66,6 @@
     .grid {
       margin-left: auto;
       margin-right: auto;
-      margin-top: 2rem;
       overflow: hidden;
 
       /* clear fix */
@@ -85,26 +84,77 @@
         background: #f2f2f2;
         border-radius: 3px;
         margin: 1rem;
-        overflow: hidden;
+        margin-bottom: 2.65rem;
 
-        img {
-          position: relative;
-          display: block;
-          min-height: 100%;
-          max-width: 100%;
-          object-fit: cover;
-          object-position: center center;
-          opacity: 1;
-          transition: opacity 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
+        &:hover img {
+          transform: scale(1.1);
         }
-      }
+        &:hover .redirect {
+          opacity: 1;
+        }
 
-      &__item-width2 {
-        width: 300px;
-      }
+        &__thumbnail {
+          margin-bottom: 6px;
+          overflow: hidden;
 
-      &__item-height2 {
-        height: 300px;
+          img {
+            display: block;
+            min-height: 100%;
+            max-width: 100%;
+            object-fit: cover;
+            object-position: center center;
+            transition: transform 1s cubic-bezier(0.22, 0.61, 0.36, 1);
+          }
+        }
+        &__details {
+          .app-name,
+          .app-type {
+            margin: 0;
+          }
+          a.redirect {
+            position: relative;
+            display: inline-block;
+            padding: 2px 6px;
+            width: 42px;
+            height: 28px;
+            border-radius: 30px;
+            text-align: center;
+            opacity: 0;
+            transition: opacity 0.25s ease-in-out;
+
+            &::after {
+              content: url('/testing/src/assets/corner-up-right.svg');
+            }
+
+            &::before {
+              content: '';
+              width: 100%;
+              height: 100%;
+              border-radius: inherit;
+              background: rgba($swatch_5, 0.1);
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              z-index: -1;
+              pointer-events: none;
+              transition: all 0.25s ease;
+              transform: scale(0.5);
+              opacity: 0;
+            }
+
+            &:hover::before {
+              opacity: 1;
+              transform: scale(1);
+            }
+          }
+        }
+        &-width2 {
+          width: 300px;
+        }
+
+        &-height2 {
+          height: 300px;
+        }
       }
     }
   }
