--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -7,6 +7,13 @@
     .wrap {
       width: 70%;
       margin: 0 auto;
+
+      @include media('screen', '>md', '<lg') {
+        width: 80%;
+      }
+      @include media('screen', '<md') {
+        width: 90%;
+      }
     }
   }
 }
