--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,7 +1,9 @@
 // Predefined Break-points
-$mediaMaxWidth: 1260px;
-$mediaBp1Width: 960px;
-$mediaMinWidth: 480px;
+$mediaXL: 1200px;
+$mediaLg: 992px;
+$mediaMd: 768px;
+$mediaSm: 576px;
+$mediaXS: 480px;
 
 @function translate-media-condition($c) {
   $condMap: (
@@ -9,17 +11,21 @@ $mediaMinWidth: 480px;
     'print': 'only print',
     'retina':
       '(-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (min-device-pixel-ratio: 1.5), (min-resolution: 120dpi)',
-    '>maxWidth': '(min-width: #{$mediaMaxWidth + 1})',
-    '<maxWidth': '(max-width: #{$mediaMaxWidth})',
-    '>bp1Width': '(min-width: #{$mediaBp1Width + 1})',
-    '<bp1Width': '(max-width: #{$mediaBp1Width})',
-    '>minWidth': '(min-width: #{$mediaMinWidth + 1})',
-    '<minWidth': '(max-width: #{$mediaMinWidth})',
+    '>xl': '(min-width: #{$mediaXL + 1})',
+    '<xl': '(max-width: #{$mediaXL})',
+    '>lg': '(min-width: #{$mediaLg + 1})',
+    '<lg': '(max-width: #{$mediaLg})',
+    '>md': '(min-width: #{$mediaMd + 1})',
+    '<md': '(max-width: #{$mediaMd})',
+    '>sm': '(min-width: #{$mediaSm + 1})',
+    '<sm': '(max-width: #{$mediaSm})',
+    '>xs': '(min-width: #{$mediaXS + 1})',
+    '<xs': '(max-width: #{$mediaXS})',
   );
   @return map-get($condMap, $c);
 }
 
-// The mdia mixin
+// The media mixin
 @mixin media($args...) {
   $query: '';
   @each $arg in $args {
@@ -33,39 +39,3 @@ $mediaMinWidth: 480px;
     @content;
   }
 }
-
-/**
- * Usage examples
- */
-section {
-  @include media('retina') {
-    border: 2px dotted #000;
-  }
-  @include media('screen', '>bp1Width', '<maxWidth') {
-    background: red;
-    color: white;
-  }
-  @include media('screen', '>minWidth', '<bp1Width') {
-    background: green;
-    color: white;
-  }
-  @include media('screen', '<minWidth') {
-    background: blue;
-    color: white;
-  }
-}
-
-// /* Extra small devices (phones, 600px and down) */
-// @media only screen and (max-width: 600px) {...}
-
-// /* Small devices (portrait tablets and large phones, 600px and up) */
-// @media only screen and (min-width: 600px) {...}
-
-// /* Medium devices (landscape tablets, 768px and up) */
-// @media only screen and (min-width: 768px) {...}
-
-// /* Large devices (laptops/desktops, 992px and up) */
-// @media only screen and (min-width: 992px) {...}
-
-// /* Extra large devices (large laptops and desktops, 1200px and up) */
-// @media only screen and (min-width: 1200px) {...}
