--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -61,7 +61,12 @@
   width: 90%;
 }
 .dividernav {
-  margin: 36px auto 50px;
+  margin: 36px auto 42px;
+}
+@include media('screen', '<sm') {
+  .hidden-sm {
+    display: none;
+  }
 }
 // middot
 .middot {
@@ -111,11 +116,26 @@
 }
 // container
 .maxwidth {
-  max-width: 1070px;
+  max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
-}
 
-// container size
-// Extra small: <576px	Small: ≥576px	Medium: ≥768px	Large: ≥992px	Extra large: ≥1200px
-// max-width:	  100%	          540px	         720px        	960px	              1140px
+  @include media('screen', '>xl') {
+    max-width: 1140px;
+  }
+  @include media('screen', '>lg', '<xl') {
+    max-width: 960px;
+  }
+  @include media('screen', '>md', '<lg') {
+    max-width: 720px;
+  }
+  @include media('screen', '>sm', '<md') {
+    max-width: 540px;
+  }
+  @include media('screen', '>xs', '<sm') {
+    max-width: 456px;
+  }
+  @include media('screen', '<xs') {
+    max-width: 100%;
+  }
+}
