--- a/src/scss/_works.scss
+++ b/src/scss/_works.scss
@@ -1,11 +1,17 @@
 /*---- recent works ----*/
 .works {
   padding: 56px 0;
+  @include media('screen', '<sm') {
+    padding: 36px 0;
+  }
 
   &__wrapper {
     .subtitle-2 {
       margin: 22px auto 36px;
       width: 70%;
+      @include media('screen', '<sm') {
+        margin: 16px auto 26px;
+      }
     }
 
     .component {
@@ -81,7 +87,6 @@
         float: left;
         width: 296px;
         height: 220px;
-        background: #f2f2f2;
         border-radius: 3px;
         margin: 1rem;
         margin-bottom: 2.65rem;
