--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,8 @@
 @import 'variables';
+@import 'mixins';
 @import 'global';
 @import 'utils';
-@import 'smooth-scroll';
+// @import 'smooth-scroll';
 
 @import 'temp';
 @import 'header';
