add dynamic smooth-scroll

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 @import 'global';
 @import 'utils';
-// @import 'smooth-scroll';
+@import 'smooth-scroll';
 
 @import 'temp';
 @import 'header';
